tests/fixtures/errors/conversion_dim_mismatch.gcl
// error: conversion target has wrong dimension
param alt: Length = 400.0 km;
node bad: Length = @alt -> s;
